--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ h1 {
 }
 a {
   font-size: 12px;
+  cursor: pointer;
 }
 .text-grey {
   color: var(--grey);
@@ -65,7 +66,21 @@ a {
 }
 .col-6 {
   width: 50%;
-  max-height: 100vh;
+  height: 100%;
+}
+
+.product-image-container {
+  padding-top: 25px;
+  transition: 1s ease;
+  background-color: #f3cc79;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 .content {
   text-align: center;
@@ -77,8 +92,11 @@ a {
   width: 100%;
   margin: 25px 0px;
 }
-.space-around {
-  justify-content: space-around;
+.col-2 {
+  width: 15%;
+}
+.col-8 {
+  flex: 1;
 }
 .col {
   display: flex;
