--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,7 @@ button {
   opacity: 0;
   transition: opacity 500ms;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   body {
     overflow-y: auto;
   }
@@ -157,6 +157,7 @@ button {
   a,
   button {
     font-size: 10px;
+    color: red;
   }
   h1 {
     font-size: 15px;
